项目依赖重构