@@ -33,7 +33,6 @@
         <maven.compiler.target>25</maven.compiler.target>
         <junit.jupiter.api.version>6.0.1</junit.jupiter.api.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <maven.compiler-plugin.version>3.11.0</maven.compiler-plugin.version>
         <spring.boot.maven.plugin.version>3.5.6</spring.boot.maven.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -42,6 +41,7 @@
         <rxjava.version>3.1.12</rxjava.version>
         <lombok.version>1.18.42</lombok.version>
         <guava.version>33.5.0-jre</guava.version>
+        <javapoet.version>1.3.0</javapoet.version>
         <sofa.rpc.version>6.0.4</sofa.rpc.version>
         <jspecify.version>1.0.0</jspecify.version>
         <sl4j.api.version>2.0.17</sl4j.api.version>
@@ -52,6 +52,7 @@
         <freemarker.version>2.3.34</freemarker.version>
         <commons.io.version>2.20.0</commons.io.version>
         <spring.grpc.version>0.11.0</spring.grpc.version>
+        <auto.service.version>1.1.1</auto.service.version>
         <netty.all.version>4.2.6.Final</netty.all.version>
         <moshi.kotlin.version>1.15.2</moshi.kotlin.version>
         <sofa.registry.version>6.5.6</sofa.registry.version>
@@ -71,6 +72,8 @@
         <native.maven.plugin.version>0.11.1</native.maven.plugin.version>
         <commons.collections4.version>4.5.0</commons.collections4.version>
         <protobuf.maven.plugin.version>3.8.0</protobuf.maven.plugin.version>
+        <sofa.boot.healthcheck.version>3.25.0</sofa.boot.healthcheck.version>
+        <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
         <jackson.module.kotlin.version>2.20.0</jackson.module.kotlin.version>
         <mybatis.flex.processor.version>1.11.3</mybatis.flex.processor.version>
         <lombok.mapstruct.binding.version>0.2.0</lombok.mapstruct.binding.version>
@@ -309,6 +312,16 @@
                 <groupId>com.alipay.sofa</groupId>
                 <artifactId>registry-client-all</artifactId>
             </dependency>
+            <dependency>
+                <groupId>com.alipay.sofa</groupId>
+                <artifactId>healthcheck-sofa-boot-starter</artifactId>
+                <version>${sofa.boot.healthcheck.version}</version>
+            </dependency>
+            <!-- 弃用 -->
+            <dependency>
+                <groupId>com.alipay.sofa.lookout</groupId>
+                <artifactId>lookout-sofa-boot-starter</artifactId>
+            </dependency>
             <!-- SOFA BOOT相关依赖 -->
             <!-- 序列化与类型转换相关的工具 -->
             <dependency>
@@ -396,6 +409,16 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.spring.boot.starter}</version>
             </dependency>
+            <dependency>
+                <groupId>com.squareup</groupId>
+                <artifactId>javapoet</artifactId>
+                <version>${javapoet.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.auto.service</groupId>
+                <artifactId>auto-service</artifactId>
+                <version>${auto.service.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -430,6 +453,51 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.plugin.version}</version>
+                    <configuration>
+                        <source>25</source>
+                        <target>25</target>
+                        <release>25</release>
+                        <encoding>UTF-8</encoding>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+                        <verbose>true</verbose>
+                        <showCompilationChanges>true</showCompilationChanges>
+                        <showWarnings>true</showWarnings>
+                        <showDeprecation>true</showDeprecation>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok-mapstruct-binding</artifactId>
+                                <version>${lombok.mapstruct.binding.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>${mapstruct.processor.version}</version>
+                            </path>
+                            <path>
+                                <groupId>com.google.auto.service</groupId>
+                                <artifactId>auto-service</artifactId>
+                                <version>${auto.service.version}</version>
+                            </path>
+                            <path>
+                                <groupId>com.mybatis-flex</groupId>
+                                <artifactId>mybatis-flex-processor</artifactId>
+                                <version>${mybatis.flex.processor.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>io.github.ascopes</groupId>
                     <artifactId>protobuf-maven-plugin</artifactId>
@@ -485,6 +553,9 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.maven.plugin.version}</version>
+                    <configuration>
+                        <jvmArguments>--enable-preview</jvmArguments>
+                    </configuration>
                     <executions>
                         <execution>
                             <goals>
@@ -506,63 +577,21 @@
         </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <extensions>true</extensions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <jvmTarget>${maven.compiler.target}</jvmTarget>
-                    <args>
-                        <arg>-Xjsr305=strict</arg>
-                    </args>
-                    <compilerPlugins>
-                        <plugin>spring</plugin>
-                        <plugin>no-arg</plugin>
-                    </compilerPlugins>
-                    <pluginOptions>
-                        <option>no-arg:annotation=cn.hubbo.utils.fory.NoArgConstructor</option>
-                    </pluginOptions>
+                    <source>25</source>
+                    <target>25</target>
+                    <release>25</release>
+                    <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <verbose>true</verbose>
+                    <showCompilationChanges>true</showCompilationChanges>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
-                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
-                            </sourceDirs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
-                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
-                                <sourceDir>target/generated-sources/annotations</sourceDir>
-                            </sourceDirs>
-                        </configuration>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-allopen</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-noarg</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -592,6 +621,11 @@
                     <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                 </pluginRepository>
             </pluginRepositories>
+            <properties>
+                <maven.compiler.source>25</maven.compiler.source>
+                <maven.compiler.target>25</maven.compiler.target>
+                <maven.compiler.compilerVersion>25</maven.compiler.compilerVersion>
+            </properties>
         </profile>
     </profiles>
 
